--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "@radix-ui/react-tooltip": "^1.0.7",
     "@toast-ui/editor": "^3.2.2",
     "@toast-ui/react-editor": "^3.2.3",
+    "@uiw/react-markdown-preview": "^5.1.1",
     "axios": "^1.6.7",
+    "braft-editor": "^2.3.9",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "embla-carousel-react": "8.0.0",
